@@ -32,7 +32,7 @@
 
 #	logfile			/var/log/nscd.log
 #	threads			4
-#	max-threads		128
+#	max-threads		32
 #	server-user		nobody
 #	stat-user		somebody
 	debug-level		0
