@@ -1,5 +1,8 @@
 2007-11-05  Ulrich Drepper  <drepper@redhat.com>
 
+	* time/tzfile.c (__tzfile_read): Fix check for version 0 data files.
+	Patch by Szymon Siwek <sls@poczta.wp.pl>.
+
 	* nscd/aicache.c (addhstaiX): Check herrno after IPv4 lookup only
 	when the lookup call failed.
 
